--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>不悔，就是不悔</title>
+    <title>Authors - 不悔，就是不悔</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
 
     <link href="http://myahmao.com/images/favicon.ico" rel="icon">
 
-<link rel="canonical" href="http://myahmao.com">
+
         <meta name="author" content="ahmao" />
 
     <!-- Open Graph tags -->
@@ -67,14 +67,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
-            <article>
-                <h2><a href="http://myahmao.com/first.html">第一篇</a></h2>
-                <div class="summary"><p>这是第一篇，哈不错吧，希望这次能够push成功。</p>
-                    <a class="btn btn-default btn-xs" href="http://myahmao.com/first.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-
+    <h1>Authors on 不悔，就是不悔</h1>
+        <li><a href="http://myahmao.com/author/yong.html">yong</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
