--- a/archives.html
+++ b/archives.html
@@ -111,8 +111,8 @@
             <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
-                        <a href="/tag/new.html">
-                            new
+                        <a href="/tag/.html">
+                            
                         </a>
                     </li>
                 </ul>
@@ -127,8 +127,8 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="#" target="_blank">
-                You can modify those links in your config file
+            <a href="http://python.org/" target="_blank">
+                Python.org
             </a>
         </li>
       </ul>
