--- a/first.html
+++ b/first.html
@@ -12,17 +12,17 @@
 <link rel="canonical" href="/first.html">
 
         <meta name="author" content="yong" />
-        <meta name="keywords" content="new" />
-        <meta name="description" content="这是第一篇，哈不错吧，希望这次能够push成功。" />
+        <meta name="keywords" content="" />
+        <meta name="description" content="第一篇，哈哈" />
 
         <meta property="og:site_name" content="不悔，就是不悔" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="第一篇"/>
         <meta property="og:url" content="/first.html"/>
-        <meta property="og:description" content="这是第一篇，哈不错吧，希望这次能够push成功。"/>
+        <meta property="og:description" content="第一篇，哈哈"/>
         <meta property="article:published_time" content="2015-05-22" />
             <meta property="article:section" content="new" />
-            <meta property="article:tag" content="new" />
+            <meta property="article:tag" content="" />
             <meta property="article:author" content="yong" />
 
 
@@ -99,11 +99,11 @@
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/new.html">new</a>
+	<a href="/tag/.html"></a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p>这是第一篇，哈不错吧，希望这次能够push成功。</p>
+                <p>第一篇，哈哈</p>
             </div>
             <!-- /.entry-content -->
         </article>
@@ -145,8 +145,8 @@
             <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
-                        <a href="/tag/new.html">
-                            new
+                        <a href="/tag/.html">
+                            
                         </a>
                     </li>
                 </ul>
@@ -161,8 +161,8 @@
             </a>
         </li>
         <li class="list-group-item">
-            <a href="#" target="_blank">
-                You can modify those links in your config file
+            <a href="http://python.org/" target="_blank">
+                Python.org
             </a>
         </li>
       </ul>
