--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 
 
 
-<link rel="canonical" href="http://myahmao.github.io/www">
+<link rel="canonical" href=".">
         <meta name="author" content="ahmao" />
 
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="不悔，就是不悔" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="不悔，就是不悔"/>
-        <meta property="og:url" content="http://myahmao.github.io/www"/>
+        <meta property="og:url" content="."/>
         <meta property="og:description" content="不悔，就是不悔"/>
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://myahmao.github.io/www/theme/css/bootstrap.cosmo.min.css" type="text/css"/>
-    <link href="http://myahmao.github.io/www/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.cosmo.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://myahmao.github.io/www/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://myahmao.github.io/www/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
-        <link href="http://myahmao.github.io/www/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
               title="不悔，就是不悔 ATOM Feed"/>
 
 
@@ -45,17 +45,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://myahmao.github.io/www/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 不悔，就是不悔            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="http://myahmao.github.io/www/category/new.html">New</a>
+                            <a href="./category/new.html">New</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="http://myahmao.github.io/www/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="./archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -67,9 +67,9 @@
     <div class="row">
         <div class="col-sm-9">
             <article>
-                <h2><a href="http://myahmao.github.io/www/first.html">第一篇</a></h2>
+                <h2><a href="./first.html">第一篇</a></h2>
                 <div class="summary"><p>第一篇，哈哈</p>
-                    <a class="btn btn-default btn-xs" href="http://myahmao.github.io/www/first.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="./first.html">more ...</a>
                 </div>
             </article>
             <hr/>
@@ -90,27 +90,27 @@
             <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
                 <ul class="list-group" id="recentposts">
                     <li class="list-group-item">
-                        <a href="http://myahmao.github.io/www/first.html">
+                        <a href="./first.html">
                             第一篇
                         </a>
                     </li>
                 </ul>
             </li>
 
-            <li class="list-group-item"><a href="http://myahmao.github.io/www/"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
+            <li class="list-group-item"><a href="./"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
                 <ul class="list-group" id="categories">
                     <li class="list-group-item">
-                        <a href="http://myahmao.github.io/www/category/new.html">
+                        <a href="./category/new.html">
                             <i class="fa fa-folder-open fa-lg"></i> new
                         </a>
                     </li>
                 </ul>
             </li>
 
-            <li class="list-group-item"><a href="http://myahmao.github.io/www/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
-                        <a href="http://myahmao.github.io/www/tag/.html">
+                        <a href="./tag/.html">
                             
                         </a>
                     </li>
@@ -150,13 +150,13 @@
       </div>
    </div>
 </footer>
-<script src="http://myahmao.github.io/www/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://myahmao.github.io/www/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://myahmao.github.io/www/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
 
 </body>
