--- a/output/first.html
+++ b/output/first.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/first.html">
+<link rel="canonical" href="./first.html">
 
         <meta name="author" content="yong" />
         <meta name="keywords" content="" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="不悔，就是不悔" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="第一篇"/>
-        <meta property="og:url" content="/first.html"/>
+        <meta property="og:url" content="./first.html"/>
         <meta property="og:description" content="第一篇，哈哈"/>
         <meta property="article:published_time" content="2015-05-22" />
             <meta property="article:section" content="new" />
@@ -27,15 +27,19 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.cosmo.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.cosmo.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
+
+        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="不悔，就是不悔 ATOM Feed"/>
 
 
 
-
+        <link href="./feeds/new.atom.xml" type="application/atom+xml" rel="alternate"
+              title="不悔，就是不悔 new ATOM Feed"/>
 
 </head>
 <body>
@@ -49,17 +53,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 不悔，就是不悔            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="/category/new.html">New</a>
+                            <a href="./category/new.html">New</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="./archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -74,7 +78,7 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/first.html"
+                    <a href="./first.html"
                        rel="bookmark"
                        title="Permalink to 第一篇">
                         第一篇
@@ -95,7 +99,7 @@
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/.html"></a>
+	<a href="./tag/.html"></a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -121,27 +125,27 @@
             <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
                 <ul class="list-group" id="recentposts">
                     <li class="list-group-item">
-                        <a href="/first.html">
+                        <a href="./first.html">
                             第一篇
                         </a>
                     </li>
                 </ul>
             </li>
 
-            <li class="list-group-item"><a href="/"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
+            <li class="list-group-item"><a href="./"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
                 <ul class="list-group" id="categories">
                     <li class="list-group-item">
-                        <a href="/category/new.html">
+                        <a href="./category/new.html">
                             <i class="fa fa-folder-open fa-lg"></i> new
                         </a>
                     </li>
                 </ul>
             </li>
 
-            <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
-                        <a href="/tag/.html">
+                        <a href="./tag/.html">
                             
                         </a>
                     </li>
@@ -181,13 +185,13 @@
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
 
 </body>
