Generate Pelican site

--- a/first.html
+++ b/first.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="yong" />
         <meta name="keywords" content="" />
-        <meta name="description" content="第一篇，哈哈" />
+        <meta name="description" content="[NineChap 10] Additional Questions [NineChap 9] Big Date, System Design and Resume [NineChap 8] High Frequency Questions [NineChap 7] Data Structure [NineChap 6] Graph and Search [NineChap 5.1] Dynamic Programming [NineChap 4.2] Linked List Additional [NineChap 4.1] Linked List [NineChap 3.4] Binary Tree Additional [NineChap 1 ..." />
 
         <meta property="og:site_name" content="不悔，就是不悔" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="第一篇"/>
         <meta property="og:url" content="http://myahmao.github.io/www/first.html"/>
-        <meta property="og:description" content="第一篇，哈哈"/>
+        <meta property="og:description" content="[NineChap 10] Additional Questions [NineChap 9] Big Date, System Design and Resume [NineChap 8] High Frequency Questions [NineChap 7] Data Structure [NineChap 6] Graph and Search [NineChap 5.1] Dynamic Programming [NineChap 4.2] Linked List Additional [NineChap 4.1] Linked List [NineChap 3.4] Binary Tree Additional [NineChap 1 ..."/>
         <meta property="article:published_time" content="2015-05-22" />
             <meta property="article:section" content="new" />
             <meta property="article:tag" content="" />
@@ -103,7 +103,26 @@
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p>第一篇，哈哈</p>
+                <pre>
+
+[NineChap 10] Additional Questions
+[NineChap 9] Big Date, System Design and Resume
+[NineChap 8] High Frequency Questions
+[NineChap 7] Data Structure
+[NineChap 6] Graph and Search
+[NineChap 5.1] Dynamic Programming
+[NineChap 4.2] Linked List Additional
+[NineChap 4.1] Linked List
+[NineChap 3.4] Binary Tree Additional
+[NineChap 1.2] Permutation
+[NineChap 1.1] strStr and Coding Style
+[NineChap 3.1] Binary Tree DFS and Divide Conquer
+[NineChap 3.2] Binary Tree BFS
+[NineChap 3.3] Binary Search Tree
+[NineChap 2.2] Sorted Array
+[NineChap 2.1] Binary Search
+
+</pre>
             </div>
             <!-- /.entry-content -->
     <hr/>
@@ -185,8 +204,8 @@
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://myahmao.github.io/www/tag/internet.html">
-                            internet
+                        <a href="http://myahmao.github.io/www/tag/jerry-yang.html">
+                            Jerry Yang
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
@@ -195,8 +214,8 @@
                         </a>
                     </li>
                     <li class="list-group-item tag-4">
-                        <a href="http://myahmao.github.io/www/tag/jerry-yang.html">
-                            Jerry Yang
+                        <a href="http://myahmao.github.io/www/tag/internet.html">
+                            internet
                         </a>
                     </li>
                 </ul>
